# Digitation_V3

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  extract_visual_tasks.py  main.py  requirements.txt  setup.cfg
component_placer/: bom_handler.py  component_input_dialog.py  component_placer.py  ghost.py  normalizer.py  quick_creation_controller.py
constants/: __init__.py  constants.py  constants.txt
display/: coord_converter.py  display_library.py  pad_shapes.py
edit_pads/: actions.py  pad_editor_dialog.py
inputs/: input_handler.py
logs/: log_handler.py
mdb_exports/: InitInfo.csv  VersionInfo.csv  detCompDesc.csv  detComponent.csv  detComponentClass.csv  detComponentClassFunction.csv  detComponentGenericPList.csv  detFunction.csv  detFunctionMacroKind.csv  detFunctionMacroKind_ACLAM.csv  detFunctionMacroKind_LAM.csv  detFunction_Saldatrice.csv  detFunction_schedaNuda.csv  detInstruction.csv  detInstructionNS.csv  detInstructionPAR.csv  detMacroKindLocalVariable.csv  detMacroKindLocalVariable_Backup.csv  detMacroKindParameterClass.csv  detMacroLine.csv  detMethodParam.csv  detOpCode.csv  detSignalKind.csv  detSignalShortSignal.csv  detToolsMethod.csv  detWavNode.csv  tabBoard.csv  tabCluster.csv  tabClusterBTData.csv  tabCompAlias.csv  tabCompDesc.csv  tabComponent.csv  tabComponentClass.csv  tabComponentKind.csv  tabFunction.csv  tabGlobalVariable.csv  tabInstruction.csv  tabJump.csv  tabLabMacro.csv  tabMacroKind.csv  (+17 more)
objects/: alf_file.py  board_object.py  nod_file.py  object_library.py  search_library.py  (+1 more)
(+131 files in other folders)
