[metadata]
name = digitation-v3
version = 0.1.0
author = Michael Kovnator, Seica Israel
author_email = michael.Kovnator@seica.com
description = PCB digitisation & test‑automation toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KomacloS/Digitation_V3.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = codes
packages = find:
python_requires = >=3.9
install_requires =
    -r requirements.txt

[options.packages.find]
where = codes

[options.entry_points]
console_scripts =
    digitation = main:main
